--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
   "name": "zongphp/collection",
   "description": "Collection 组件提供一个流畅、方便的封装来操作数据",
-  "type": "project",
   "keywords": [
+    "zongphp",
     "collection",
     "集合管理"
   ],
@@ -10,7 +10,7 @@
   "minimum-stability": "stable",
   "require": {
     "php": ">=5.4.0",
-    "zongphp/xml": "~1.0"
+    "zongphp/page": "~2.0"
   },
   "autoload": {
     "files": [
